fix overflow not working on phone Signed-off-by:Guillaume Martigny <guillaume.martigny@gmail.com>

--- a/res/vitae.css
+++ b/res/vitae.css
@@ -8,15 +8,15 @@
     box-sizing: border-box;
 }
 
-html, body{
-    height: 100%;
-}
 body{
     margin: 0;
-    overflow: hidden;
     font-family: "Philosopher", sans-serif;
     font-size: 16px;
     color: #111;
+}
+#main{
+    height: 100vh;
+    overflow: hidden;
 }
 body.ready.translator-ready .article{
     top: 50%;
@@ -131,6 +131,7 @@ aside{
 #onTheRight{
     right: 50px;
     text-align: right;
+    width: 120px;
 }
 #afix{
     display: table-cell;
@@ -172,10 +173,10 @@ aside{
     border-color: #f2da4e;
 }
 
-@media screen AND (max-width: 1290px){
+@media screen AND (max-width: 1320px){
     .article{
-        width: calc(100% - 110px);
-        margin-right: 110px;
+        width: calc(100% - 120px);
+        margin: 0;
     }
     #onTheRight{
         right: 0;
@@ -219,9 +220,9 @@ aside{
         display: none;
     }
 
-    .article{
+    #main .article{
         position: relative;
-        top: auto !important;
+        top: 0 !important;
         margin: 15px auto 0;
         overflow: hidden;
         width: 18cm;
